# nevi

./: Cargo.toml  KEYBINDINGS.md  KEYBINDS_ROADMAP.md  README.md
src/: floating_terminal.rs  harpoon.rs  lib.rs  main.rs  markdown_preview.rs  perf.rs
src/commands/: mod.rs
src/config/: keymap.rs  languages.rs  mod.rs
src/copilot/: client.rs  mod.rs  types.rs
src/editor/: buffer.rs  marks.rs  mod.rs  register.rs
src/explorer/: mod.rs
src/finder/: keybinds.rs  keybinds.toml  matcher.rs  mod.rs
src/formatter/: mod.rs
src/frecency/: mod.rs
src/indent/: mod.rs
src/input/: mod.rs  motion.rs
src/lsp/: client.rs  mod.rs  multi.rs  types.rs  watched_files.rs
src/syntax/: mod.rs  theme.rs
src/terminal/: mod.rs
src/theme/: loader.rs  mod.rs
