[package]
name = "nevi"
version = "0.1.0"
edition = "2021"
description = "A Neovim-like terminal editor in Rust"
authors = ["Anthony Amaro"]
repository = "https://github.com/anthonyamaro15/nevi"

[dependencies]
# Terminal handling
crossterm = { version = "0.28", features = ["bracketed-paste"] }

# Text storage (rope data structure)
ropey = "1.6"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Unicode support
unicode-width = "0.1"
unicode-segmentation = "1.10"

# Syntax highlighting
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-css = "0.23"
tree-sitter-json = "0.24"
tree-sitter-md = "0.3"
tree-sitter-toml-ng = "0.7"
tree-sitter-html = "0.23"
tree-sitter-python = "0.23"
streaming-iterator = "0.1"

# System clipboard
arboard = "3.4"

# Configuration
toml = "0.8"
toml_edit = "0.22"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"

# Fuzzy finder
walkdir = "2.5"           # Directory traversal
ignore = "0.4"            # .gitignore support
nucleo = "0.5"            # Fast fuzzy matching

# LSP support
lsp-types = "0.95"        # LSP protocol types
serde_json = "1.0"        # JSON serialization for LSP messages
globset = "0.4"           # LSP glob pattern matching
notify = "8"              # Filesystem watching for LSP watched files

# Floating terminal
portable-pty = "0.8"      # Cross-platform PTY support
alacritty_terminal = { version = "0.26", default-features = false }
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
grep-matcher = "0.1.8"
regex = "1.12.2"

# Git integration
git2 = "0.19"
similar = "2.6"

[profile.release]
lto = true
codegen-units = 1
